--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,4 +20,132 @@ body {
   font-family: "PT Sans", sans-serif;
   font-size: 22px;
   line-height: 26px;
+  color: #000000;
+  background-color: #ffffff;
+}
+
+.button{
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+  text-align: center;
+  color: #ffffff;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.button-big{
+  font-family: inherit;
+  font-size: 20px;
+  line-height: 36px;
+  background-color: #756157;
+}
+
+.button-small{
+  font-family: inherit;
+  font-size: 16px;
+  line-height: 20px;
+  background-color: #756157;
+}
+
+.page-header{
+  color: #000000;
+  background-color: #ffffff;
+}
+
+.navigation-link{
+  font-family: "PT Sans", sans-serif;
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 700;
+  text-align: center;
+  color: #000000;
+  background-color: #ffffff;
+  text-decoration: none;
+}
+
+.main-index{
+  color: #000000;
+  background-color: #ffffff;
+  background-image: url('/images/welcome-background.jpg');
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+}
+
+.reasons{
+  text-align: center;
+}
+
+.intro-title{
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.reasons-title{
+  font-size: 24px;
+  line-height: 28px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.reasons-description{
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.interested{
+  text-align: center;
+}
+
+.interested-title{
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.subscribe{
+  text-align: center;
+  color: #ffffff;
+  background-image: url('/images/subscribe-background.jpg');
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+}
+
+.subscribe-title{
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.page-footer{
+  color: #000000;
+  background-color: #ffffff;
+}
+
+.phone{
+  font-size: 40px;
+  line-height: 40px;
+  text-align: center;
+  color: #000000;
+  text-decoration: none;
+}
+
+.bg-basic{
+  color: #ffffff;
+  background-color: #82B3D3;
+}
+
+.bg-sec-1{
+  background-color: rgba(131, 179, 211, 0.12);
+}
+
+.bg-sec-2{
+  background-color: rgba(131, 179, 211, 0.2);
+}
+
+.subscribe-button{
+  background-color: #82B3D3;
 }
