--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,20 +31,19 @@ body {
   color: #ffffff;
   text-decoration: none;
   text-transform: uppercase;
+  background-color: #756157;
 }
 
 .button-big{
   font-family: inherit;
   font-size: 20px;
   line-height: 36px;
-  background-color: #756157;
 }
 
 .button-small{
   font-family: inherit;
   font-size: 16px;
   line-height: 20px;
-  background-color: #756157;
 }
 
 .page-header{
@@ -73,6 +72,7 @@ body {
 
 .reasons{
   text-align: center;
+  background-color: #ffffff;
 }
 
 .intro-title{
@@ -148,4 +148,113 @@ body {
 
 .subscribe-button{
   background-color: #82B3D3;
+}
+
+.inner-header-form{
+  color: #ffffff;
+  background-image: url("/images/filter-background.jpg");
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+}
+
+.inner-header-title{
+  font-size: 60px;
+  line-height: 78px;
+  font-weight: 700;
+  text-align: left;
+}
+
+.breadcrumbs{
+  font-size: 16px;
+  line-height: 21px;
+  text-align: left;
+  color: #ffffff;
+
+}
+
+.breadcrumbs-link{
+  color: inherit;
+  text-decoration: none;
+}
+
+.catalog-filter-title{
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 700;
+}
+
+.control{
+  font-size: 18px;
+  line-height: 23px;
+}
+
+.select-control{
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.search-results-header h2{
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 700;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+.button-light{
+  color: #000000;
+  background-color: #ffffff;
+}
+
+.hotels-card-link{
+  color: #000000;
+  text-decoration: none;
+}
+
+.hotels-card-title{
+  font-size: 24px;
+  line-height: 28px;
+  font-weight: 700;
+  text-align: left;
+}
+
+.hotels-card-group{
+  font-size: 18px;
+  line-height: 21px;
+  text-align: left;
+}
+
+.hotels-card-price{
+  font-size: 18px;
+  line-height: 21px;
+  text-align: right;
+}
+
+
+.pagination-link {
+  font-size: 20px;
+  line-height: 36px;
+  font-weight: 700;
+  text-align: center;
+  color: #ffffff;
+  background-color: #82B3D3;
+  text-decoration: none;
+}
+
+.pagination-current {
+  color: #000000;
+  background-color: #F2F2F2;
+}
+
+.pagination-next{
+  color: #000000;
+  background-color:#ffffff;
+}
+
+.button-favorite{
+  background-color: #82B3D3;
+}
+
+.button-favorite-active{
+  background-color: #7DB54F;
 }
