--- a/styles/styles.css
+++ b/styles/styles.css
@@ -62,6 +62,14 @@ body {
   text-decoration: none;
 }
 
+.header-icon-number{
+  font-size: 10px;
+  line-height: 10px;
+  text-align: center;
+  color: #ffffff;
+  background-color: #7DB54F;
+}
+
 .main-index{
   color: #000000;
   background-color: #ffffff;
