--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,9 +20,11 @@ body {
   font-family: "PT Sans", sans-serif;
   font-size: 22px;
   line-height: 26px;
-  color: #000000;
+  color:#333333;
   background-color: #ffffff;
 }
+
+
 
 .button{
   font-family: "PT Sans", sans-serif;
@@ -71,7 +73,6 @@ body {
 }
 
 .main-index{
-  color: #000000;
   background-color: #ffffff;
   background-image: url('/images/welcome-background.jpg');
   background-size: 100% auto;
@@ -87,6 +88,7 @@ body {
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
+  color: #000000;
   text-transform: uppercase;
 }
 
@@ -94,7 +96,12 @@ body {
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
+  color: #000000;
   text-transform: uppercase;
+}
+
+.reasons-title.w{
+  color: #ffffff;
 }
 
 .reasons-description{
@@ -110,6 +117,7 @@ body {
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
+  color: #000000;
   text-transform: uppercase;
 }
 
@@ -224,12 +232,13 @@ body {
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
+  color: #000000;
   text-align: left;
   text-transform: uppercase;
 }
 
 .button-light{
-  color: ##333333;
+  color: #333333;
   background-color: #ffffff;
 }
 
@@ -249,14 +258,12 @@ body {
   font-size: 18px;
   line-height: 21px;
   text-align: left;
-  color: #333333;
 }
 
 .hotels-card-price{
   font-size: 18px;
   line-height: 21px;
   text-align: right;
-  color: #333333;
 }
 
 .hotels-card-raiting{
@@ -264,7 +271,6 @@ body {
   line-height: 20px;
   text-align: center;
   text-transform: uppercase;
-  color: #333333;
   background-color: #F2F2F2;
 }
 
@@ -294,4 +300,16 @@ body {
 
 .button-favorite-active{
   background-color: #7DB54F;
+}
+
+.subscribe-catalog{
+  text-align: center;
+}
+
+.subscribe-catalog-title{
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 700;
+  color: #000000;
+  text-transform: uppercase;
 }
