--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,16 @@
   font-display: swap;
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  width: 1200px;
   font-family: "PT Sans", sans-serif;
   font-size: 22px;
   line-height: 26px;
@@ -24,9 +33,8 @@ body {
   background-color: #ffffff;
 }
 
-
-
 .button{
+  display: inline-block;
   font-family: "PT Sans", sans-serif;
   font-weight: 700;
   text-align: center;
@@ -53,6 +61,32 @@ body {
   background-color: #ffffff;
 }
 
+/*навигация*/
+
+.navigation{
+  display: flex;
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.navigation-logo{
+  width: 138px;
+  margin-left: 70px;
+}
+
+.navigation-list{
+  width: 465px;
+  margin: 0;
+  padding: 0;
+  margin-left: 30px;
+  list-style-type: none;
+}
+
+.navigation-user{
+  max-width: 312px;
+  margin-left: auto;
+}
+
 .navigation-link{
   font-family: "PT Sans", sans-serif;
   font-size: 20px;
@@ -72,6 +106,13 @@ body {
   background-color: #7DB54F;
 }
 
+/*главная страница*/
+.main-container{
+  width: 1200px;
+  margin: 0 auto;
+
+}
+
 .main-index{
   background-color: #ffffff;
   background-image: url('/images/welcome-background.jpg');
@@ -79,17 +120,48 @@ body {
   background-repeat: no-repeat;
 }
 
-.reasons{
-  text-align: center;
-  background-color: #ffffff;
+.page-container{
+  margin: 0 auto;
+}
+
+/*приветствие*/
+.logo-welcome-title{
+  display: block;
+  margin: 0 auto;
+  padding: 51px 371px;
 }
 
 .intro-title{
+  display: block;
+  margin-top: 69px 290px;
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
   color: #000000;
   text-transform: uppercase;
+}
+
+/*причины*/
+.reasons{
+  text-align: center;
+  background-color: #ffffff;
+}
+
+.reasons-list{
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  list-style-type: none;
+}
+
+.reasons-item{
+  width: 400px;
+  height: 384px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .reasons-title{
@@ -100,7 +172,7 @@ body {
   text-transform: uppercase;
 }
 
-.reasons-title.w{
+.reasons-title.white{
   color: #ffffff;
 }
 
@@ -109,8 +181,11 @@ body {
   line-height: 21px;
 }
 
+/*заинтересовались?*/
 .interested{
   text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
 .interested-title{
@@ -121,7 +196,9 @@ body {
   text-transform: uppercase;
 }
 
+/*подписка*/
 .subscribe{
+  margin: 0 auto;
   text-align: center;
   color: #ffffff;
   background-image: url('/images/subscribe-background.jpg');
@@ -136,9 +213,40 @@ body {
   text-transform: uppercase;
 }
 
+.email-field{
+  margin: 0;
+  padding: 0;
+  padding-left: 20px;
+  width: 452px;
+  height: 52px;
+  background-color: #F2F2F2;
+  border: none;
+}
+
+.subscribe-button{
+  background-color: #82B3D3;
+}
+
+/*футер*/
 .page-footer{
   color: #000000;
   background-color: #ffffff;
+}
+
+.page-footer-container{
+  display: flex;
+  justify-content: space-between;
+  width: 1060px;
+  margin: 0 auto;
+  padding: 40px 70px 30px;
+}
+
+.footer-social-list{
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
 }
 
 .button-socials{
@@ -154,6 +262,7 @@ body {
   text-decoration: none;
 }
 
+/*фон в "причинах"*/
 .bg-basic{
   color: #ffffff;
   background-color: #82B3D3;
@@ -167,30 +276,42 @@ body {
   background-color: rgba(131, 179, 211, 0.2);
 }
 
-.subscribe-button{
-  background-color: #82B3D3;
-}
-
-.inner-header-form{
+/*страница с гостиницами*/
+.inner-header-container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 0 auto;
   color: #ffffff;
   background-image: url("/images/filter-background.jpg");
   background-size: 100% auto;
   background-repeat: no-repeat;
 }
 
+.inner-header-breadcrumbs{
+  width: 1060px;
+  margin: 35px 70px;
+}
+
 .inner-header-title{
+  margin: 0;
+  padding: 0;
   font-size: 60px;
   line-height: 78px;
   font-weight: 700;
   text-align: left;
+  margin-bottom: 8px;
 }
 
 .breadcrumbs{
+  display: flex;
+  margin: 0;
+  padding: 0;
   font-size: 16px;
   line-height: 21px;
   text-align: left;
   color: #ffffff;
-
+  list-style-type: none;
 }
 
 .breadcrumbs-link{
@@ -198,15 +319,43 @@ body {
   text-decoration: none;
 }
 
+.breadcrumbs-icon{
+  margin-right: 10px;
+}
+
+/*фильтр*/
+.catalog-hotels{
+  display: flex;
+  margin-left: 70px;
+  padding: 0;
+  width: 1060px;
+}
+
 .catalog-filter-title{
+  margin: 0;
+  padding: 0;
   font-size: 20px;
   line-height: 24px;
   font-weight: 700;
 }
 
-.control{
+.catalog-filter-group{
+  margin: 0;
+  padding: 0;
+  margin-right: 70px;
+}
+
+.catalog-filter-item{
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
   font-size: 18px;
   line-height: 23px;
+}
+
+.control{
+  display: block;
+  padding-left: 70px;
 }
 
 .select-control{
@@ -228,7 +377,26 @@ body {
   background-color: rgba(0,0,0,0);
 }
 
+/*результаты поиска*/
+.sorting{
+  display: flex;
+  margin: 50px 70px 40px;
+  padding: 0;
+  width: 1060px;
+}
+
+.all-search-results{
+  margin: 40px 70px;
+}
+
+.search-results{
+  width: 1060px;
+}
+
 .search-results-header h2{
+  margin: 0;
+  padding: 0;
+  margin-right: 200px;
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
@@ -237,9 +405,18 @@ body {
   text-transform: uppercase;
 }
 
+.select-control{
+  padding: 14px 20px;
+  padding-right: 131px;
+}
+
 .button-light{
   color: #333333;
   background-color: #ffffff;
+}
+
+.hotels-card{
+  list-style-type: none;
 }
 
 .hotels-card-link{
@@ -272,6 +449,12 @@ body {
   text-align: center;
   text-transform: uppercase;
   background-color: #F2F2F2;
+}
+
+.pagination{
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
 }
 
 .pagination-link {
