--- a/styles/styles.css
+++ b/styles/styles.css
@@ -164,6 +164,10 @@ body {
   align-items: center;
 }
 
+.reasons-item.reasons-image{
+  width: 800px;
+}
+
 .reasons-title{
   font-size: 24px;
   line-height: 28px;
