--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,12 @@
   font-display: swap;
 }
 
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
 html {
   height: 100%;
 }
@@ -30,12 +36,27 @@ body {
   font-size: 22px;
   line-height: 26px;
   color:#333333;
-  background-color: #ffffff;
+  background-color: #F2F2F2;
 }
 
-/*для стики футер*/
-.main-container{
-  flex-grow: 1;
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.container{
+  width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
 .button{
@@ -61,6 +82,8 @@ body {
   line-height: 20px;
 }
 
+/*хедер*/
+
 .page-header{
   color: #000000;
   background-color: #ffffff;
@@ -70,16 +93,21 @@ body {
 
 .navigation{
   display: flex;
+  flex-wrap: wrap;
   width: 1200px;
   margin: 0 auto;
+  position: relative;
+  z-index: 1;
 }
 
 .navigation-logo{
-  width: 138px;
+  max-height: 64px;
   margin-left: 70px;
 }
 
 .navigation-list{
+  display: flex;
+  flex-wrap: wrap;
   width: 465px;
   margin: 0;
   padding: 0;
@@ -87,12 +115,10 @@ body {
   list-style-type: none;
 }
 
-.navigation-user{
-  max-width: 312px;
-  margin-left: auto;
-}
 
 .navigation-link{
+  display: block;
+  padding: 20px 16px;
   font-family: "PT Sans", sans-serif;
   font-size: 20px;
   line-height: 24px;
@@ -101,6 +127,35 @@ body {
   color: #000000;
   background-color: #ffffff;
   text-decoration: none;
+}
+
+.navigation-list-user{
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 312px;
+  margin: 0;
+  padding: 0;
+  margin-left: auto;
+  margin-right: 70px;
+  list-style-type: none;
+}
+
+.navigation-link-user{
+  display: block;
+  width: 44px;
+  color: #000000;
+  background-color: #ffffff;
+  text-decoration: none;
+
+}
+
+.navigation-item-user{
+  min-width: 12px;
+  min-height: 22px;
+}
+
+.navigation-item-user:last-child{
+  margin-left: 20px;
 }
 
 .header-icon-number{
@@ -115,30 +170,35 @@ body {
 .main-container{
   width: 1200px;
   margin: 0 auto;
-
-}
-
-.main-index{
-  background-color: #ffffff;
-  background-image: url('/images/welcome-background.jpg');
-  background-size: 100% auto;
-  background-repeat: no-repeat;
+  display: flex;
+  flex-grow: 1;
 }
 
 .page-container{
   margin: 0 auto;
 }
 
-/*приветствие*/
+.main-intro{
+  min-height: 485px;
+  background-color: #ffffff;
+  background-image: url('/images/welcome-background.jpg');
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+}
+
 .logo-welcome-title{
   display: block;
   margin: 0 auto;
-  padding: 51px 371px;
+  padding: 0;
+  padding-top: 51px;
 }
 
+/*причины*/
+
 .intro-title{
-  display: block;
-  margin-top: 69px 290px;
+  margin: 0;
+  padding: 0;
+  margin-top: 69px;
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
@@ -146,7 +206,13 @@ body {
   text-transform: uppercase;
 }
 
-/*причины*/
+.intro-description{
+  margin: 0;
+  padding: 0;
+  margin-top: 25px;
+  margin-bottom: 90px;
+}
+
 .reasons{
   text-align: center;
   background-color: #ffffff;
@@ -163,7 +229,7 @@ body {
 
 .reasons-item{
   width: 400px;
-  height: 384px;
+  min-height: 384px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -171,9 +237,13 @@ body {
 
 .reasons-item.reasons-image{
   width: 800px;
+  min-height: 384px;
 }
 
 .reasons-title{
+  margin: 0;
+  padding: 0;
+  padding-top: 92px;
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
@@ -193,11 +263,16 @@ body {
 /*заинтересовались?*/
 .interested{
   text-align: center;
+  display: flex;
+  flex-direction: column;
   margin: 0;
   padding: 0;
 }
 
 .interested-title{
+  margin: 0;
+  padding: 0;
+  margin-top: 96px;
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
@@ -205,9 +280,30 @@ body {
   text-transform: uppercase;
 }
 
+.interested-description{
+  margin: 0;
+  padding: 0;
+  margin-top: 20px;
+}
+
+.button-container{
+  margin: 0;
+  padding: 0;
+  margin-top: 54px;
+  margin-bottom: 96px;
+}
+
+.button-search{
+  padding: 8px 50px;
+}
+
 /*подписка*/
 .subscribe{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 0 auto;
+  min-height: 414px;
   text-align: center;
   color: #ffffff;
   background-image: url('/images/subscribe-background.jpg');
@@ -216,10 +312,25 @@ body {
 }
 
 .subscribe-title{
+  margin: 0;
+  padding: 0;
+  margin-top: 96px;
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
   text-transform: uppercase;
+}
+
+.subscribe-description{
+  margin: 0;
+  padding: 0;
+  margin-top: 20px;
+  margin-bottom: 54px;
+}
+
+.subscribe-form{
+  display: flex;
+  flex-direction: row;
 }
 
 .email-field{
@@ -230,6 +341,9 @@ body {
   height: 52px;
   background-color: #F2F2F2;
   border: none;
+  font: inherit;
+  font-size: 18px;
+  font-weight: 24px;
 }
 
 .subscribe-button{
@@ -238,16 +352,23 @@ body {
 
 /*футер*/
 .page-footer{
+  display: flex;
+  flex-direction: row;
   color: #000000;
   background-color: #ffffff;
+  width: 1060px;
+  margin: 0 auto;
 }
 
 .page-footer-container{
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   width: 1060px;
+  min-height: 50px;
   margin: 0 auto;
-  padding: 40px 70px 30px;
+  padding: 40px 0 30px;
+  align-items: center;
 }
 
 .footer-social-list{
@@ -255,7 +376,13 @@ body {
   padding: 0;
   list-style-type: none;
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.footer-social-item{
+  margin: 0;
+  padding: 0 10px;
 }
 
 .button-socials{
@@ -291,6 +418,7 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   margin: 0 auto;
+  min-height: 412px;
   color: #ffffff;
   background-image: url("/images/filter-background.jpg");
   background-size: 100% auto;
@@ -298,8 +426,11 @@ body {
 }
 
 .inner-header-breadcrumbs{
-  width: 1060px;
-  margin: 35px 70px;
+  min-width: 1060px;
+  margin: 35px 70px 40px;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .inner-header-title{
@@ -314,6 +445,7 @@ body {
 
 .breadcrumbs{
   display: flex;
+  flex-direction: row;
   margin: 0;
   padding: 0;
   font-size: 16px;
@@ -335,23 +467,38 @@ body {
 /*фильтр*/
 .catalog-hotels{
   display: flex;
-  margin-left: 70px;
+  margin: 0 70px 70px;
   padding: 0;
-  width: 1060px;
+  min-width: 1060px;
+}
+
+.catalog-filter{
+  display: flex;
+  flex-direction: row;
+  min-width: 1060px;
+}
+
+.catalog-filter-group{
+  margin: 0;
+  margin-bottom: 32px;
+  padding: 0;
+  margin-right: 70px;
+  border: none;
 }
 
 .catalog-filter-title{
   margin: 0;
   padding: 0;
+  margin-bottom: 32px;
   font-size: 20px;
   line-height: 24px;
   font-weight: 700;
 }
 
-.catalog-filter-group{
+.catalog-filter-list{
   margin: 0;
   padding: 0;
-  margin-right: 70px;
+  list-style-type: none;
 }
 
 .catalog-filter-item{
@@ -362,15 +509,25 @@ body {
   line-height: 23px;
 }
 
-.control{
-  display: block;
-  padding-left: 70px;
+.catalog-filter-item:not(:last-child){
+  margin-bottom: 16px;
 }
 
 .select-control{
   font-size: 18px;
   line-height: 21px;
 }
+
+.catalog-filter-price{
+  margin: 0;
+  margin-bottom: 32px;
+  padding: 0;
+  margin-right: 70px;
+  border: none;
+  display: flex;
+  flex-direction: column;
+}
+
 
 .catalog-filter-scale{
   font-size: 18px;
@@ -494,14 +651,9 @@ body {
   background-color: #7DB54F;
 }
 
-.subscribe-catalog{
-  text-align: center;
-}
 
-.subscribe-catalog-title{
-  font-size: 30px;
-  line-height: 36px;
-  font-weight: 700;
+.subscribe-catalog{
   color: #000000;
-  text-transform: uppercase;
+  background-color:#ffffff;
+  background-image: none;
 }
