изменяет li с причинами

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -227,6 +227,11 @@ body {
   list-style-type: none;
 }
 
+.reasons-list-row{
+  display: flex;
+  flex-direction: row;
+}
+
 .reasons-item{
   width: 400px;
   min-height: 384px;
