--- a/styles/styles.css
+++ b/styles/styles.css
@@ -177,7 +177,7 @@ body {
 .main-intro{
   min-height: 485px;
   background-color: #ffffff;
-  background-image: url('/images/welcome-background.jpg');
+  background-image: url('../images/welcome-background.jpg');
   background-size: 100% auto;
   background-repeat: no-repeat;
 }
@@ -307,7 +307,7 @@ body {
   min-height: 414px;
   text-align: center;
   color: #ffffff;
-  background-image: url('/images/subscribe-background.jpg');
+  background-image: url('../images/subscribe-background.jpg');
   background-size: 100% auto;
   background-repeat: no-repeat;
 }
@@ -425,8 +425,8 @@ body {
   margin: 0 auto;
   min-height: 412px;
   color: #ffffff;
-  background-image: url("/images/filter-background.jpg");
-  background-size: 100% auto;
+  background-image: url("../images/filter-background.jpg");
+  background-size: cover;
   background-repeat: no-repeat;
   margin-bottom: 0;
 }
@@ -473,7 +473,7 @@ body {
 /*фильтр*/
 .catalog-hotels{
   display: flex;
-  margin: 0 70px 70px;
+  margin: 0 70px 38px;
   padding: 0;
   min-width: 1060px;
 }
@@ -487,7 +487,7 @@ body {
 
 .catalog-filter-group{
   margin: 0;
-  margin-bottom: 32px;
+
   padding: 0;
   margin-right: 70px;
   border: none;
