--- a/styles/styles.css
+++ b/styles/styles.css
@@ -247,6 +247,7 @@ body {
   margin: 0;
   padding: 0;
   padding-top: 92px;
+  padding-bottom: 30px;
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
@@ -259,6 +260,9 @@ body {
 }
 
 .reasons-description{
+  margin: 0;
+  padding: 0;
+  padding-top: 30px;
   font-size: 18px;
   line-height: 21px;
 }
@@ -452,6 +456,7 @@ body {
   display: flex;
   margin: 0;
   padding: 0;
+  align-items: center;
   font-size: 16px;
   line-height: 21px;
   text-align: left;
@@ -462,6 +467,9 @@ body {
 .breadcrumbs-link{
   color: inherit;
   text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .breadcrumbs-icon{
@@ -520,6 +528,9 @@ body {
 .select-control{
   font-size: 18px;
   line-height: 21px;
+  padding: 12px 20px;
+  border: 2px solid #E5E5E5;
+  border-radius: 4px;
 }
 
 .catalog-filter-price{
@@ -576,9 +587,6 @@ body {
 
 }
 
-.all-search-results{
-  margin: 40px 70px;
-}
 
 .search-results{
   width: 1060px;
@@ -603,6 +611,17 @@ body {
   text-transform: uppercase;
 }
 
+.all-search-results{
+  margin: 0;
+  padding: 0;
+}
+
+.search-results-hotels-card{
+  margin: 0;
+  padding: 0;
+  padding-bottom: 40px;
+}
+
 /*вернуться*/
 .select-control{
   padding: 14px auto 14px 20px;
@@ -619,7 +638,14 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 48px;
+  width: 48px;
+  margin-left: 8px;
+  border: 2px solid #E5E5E5;
+  border-radius: 4px;
 }
+
+
 
 .hotels-card{
   list-style-type: none;
@@ -631,6 +657,8 @@ body {
 }
 
 .hotels-card-title{
+  margin: 0;
+  padding: 0;
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
@@ -662,6 +690,7 @@ body {
   list-style-type: none;
   width: 1060px;
   margin: 40px 0 60px;
+  padding: 0;
 }
 
 .pagination-item:not(:last-child) {
