--- a/styles/styles.css
+++ b/styles/styles.css
@@ -449,7 +449,7 @@ body {
   line-height: 78px;
   font-weight: 700;
   text-align: left;
-  margin-bottom: 8px;
+  padding-bottom: 8px;
 }
 
 .breadcrumbs{
@@ -492,7 +492,6 @@ body {
 
 .catalog-filter-group{
   margin: 0;
-
   padding: 0;
   margin-right: 70px;
   border: none;
@@ -538,17 +537,23 @@ body {
   margin-bottom: 32px;
   padding: 0;
   margin-right: 70px;
+  margin-left: 70px;
   border: none;
   display: flex;
   flex-direction: column;
-  margin-left: auto;
+
 }
 
+.catalog-filter-all-scale{
+  display: flex;
+
+}
 
 .catalog-filter-scale{
   font-size: 18px;
   line-height: 24px;
   text-align: right;
+  width: 143px;
 }
 
 .filter-buttons{
@@ -577,14 +582,12 @@ body {
   padding: 0;
   width: 1060px;
   align-items: center;
-  background: orange;
+  justify-content: center;
 }
 
 .sorting-container .button{
   width: 48px;
   height: 48px;
-  background: orange;
-
 }
 
 
@@ -593,22 +596,25 @@ body {
   margin: 0 auto;
 }
 
-.search-results-header{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.search-results-header h2{
+.search-results-title{
   margin: 0;
   padding: 0;
   margin-right: 200px;
+  width: 340px;
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
   color: #000000;
   text-align: left;
   text-transform: uppercase;
+}
+
+.search-results-buttons{
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .all-search-results{
@@ -624,12 +630,13 @@ body {
 
 /*вернуться*/
 .select-control{
+  margin-right: 70px;
   padding: 14px auto 14px 20px;
   width: 294px;
   height: 49px;
   font-size: 18px;
   line-height: 21px;
-  border: 2px solid #E5E5E5;;
+  border: 2px solid #E5E5E5;
 }
 
 .button-light{
@@ -640,15 +647,21 @@ body {
   justify-content: center;
   height: 48px;
   width: 48px;
-  margin-left: 8px;
   border: 2px solid #E5E5E5;
   border-radius: 4px;
 }
 
-
+.button-light:not(:last-child){
+  margin-right: 8px;
+}
 
 .hotels-card{
   list-style-type: none;
+  border:1px solid #E6E6E6;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  padding: 20px;
 }
 
 .hotels-card-link{
