--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,12 +60,18 @@ body {
 .button{
   display: inline-block;
   font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
   font-weight: 700;
   text-align: center;
   color: #ffffff;
   text-decoration: none;
   text-transform: uppercase;
   background-color: #756157;
+  border: none;
+  border-radius: 4px;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
 .button-big{
@@ -620,17 +626,6 @@ body {
   justify-content: center;
 }
 
-.all-search-results{
-  margin: 0;
-  padding: 0;
-}
-
-.search-results-hotels-card{
-  margin: 0;
-  padding: 0;
-  padding-bottom: 40px;
-}
-
 /*вернуться*/
 .select-control{
   margin-right: 70px;
@@ -659,17 +654,38 @@ body {
   margin-right: 8px;
 }
 
-.hotels-card{
-  list-style-type: none;
-  border:1px solid #E6E6E6;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  padding: 20px;
+.all-search-results{
+  margin: 0;
+  padding: 0;
 }
 
-.hotels-card-link{
-  color: #000000;
+.hotels-list{
+  display: grid;
+  grid-template-columns: repeat(3,340px);
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+  padding-bottom: 40px;
+  border-bottom: 1px solid #E6E6E6;
+}
+
+.hotels-card{
+  list-style-type: none;
+  border: 1px solid #E6E6E6;
+  border-radius: 4px;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(2, 140px);
+  grid-template-rows: 212px min-content auto min-content min-content;
+  gap: 16px 20px;
+}
+
+.hotels-card-link-image{
+  grid-column: 1 / -1;
+}
+
+.hotels-card-link-title{
+  grid-column: 1 / -1;
   text-decoration: none;
 }
 
@@ -680,6 +696,7 @@ body {
   line-height: 28px;
   font-weight: 700;
   text-align: left;
+  color: #000000;
 }
 
 .hotels-card-group{
@@ -694,12 +711,19 @@ body {
   text-align: right;
 }
 
+.hotels-card-stars{
+  display: block;
+}
+
 .hotels-card-raiting{
+  min-height: 37px;
+  padding: 9px 22px 8px 23px;
   font-size: 16px;
   line-height: 20px;
   text-align: center;
   text-transform: uppercase;
   background-color: #F2F2F2;
+  border-radius: 4px;
 }
 
 .pagination{
