--- a/styles/styles.css
+++ b/styles/styles.css
@@ -172,7 +172,6 @@ body {
 .navigation-link-user{
   position: relative;
   display: flex;
-  width: 44px;
   color: #000000;
   background-color: #ffffff;
   text-decoration: none;
@@ -232,6 +231,7 @@ body {
   width: 1200px;
   margin: 0 auto;
   display: flex;
+  flex-direction: column;
   flex-grow: 1;
 }
 
@@ -622,6 +622,125 @@ body {
   color: rgba(117, 97, 87, 0.3);
 }
 
+/*модельое окно*/
+
+
+.modal-container{
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(242, 242, 242, 0.8);
+  z-index: 2;
+}
+
+.modal{
+  position: relative;
+  margin: auto;
+  padding: 64px 70px;
+  background-color: #ffffff;
+  border-radius: 30px;
+  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
+}
+
+.modal-hotel-search{
+  width: 717px;
+}
+
+.modal-close-button{
+  position: absolute;
+  padding: 0;
+  top: 64px;
+  right: 52px;
+  width: 52px;
+  height: 52px;
+  background-color: #F2F2F2;
+  border: none;
+  border-radius: 50%;
+  background-image: url(../images/icon-close.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+}
+
+.modal-close-button:hover{
+  background-color: #E6E6E6;
+}
+
+.modal-close-button:focus{
+  background-color: #E6E6E6;
+  outline: 3px solid #83B3D3;
+}
+
+.modal-close-button:active{
+  background-color: #E6E6E6;
+}
+
+.modal-title {
+  margin: 0;
+  margin-bottom: 64px;
+  font-family: "PT Sans", sans-serif;
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 700;
+  color: #000000;
+  text-transform: uppercase;
+}
+
+.modal-text{
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 700;
+  color: #000000;
+  font-style: bold;
+  text-transform: capitalize;
+}
+
+.modal-date-field{
+  width: 440px;
+  height: 48px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 20px;
+  background-color: #F2F2F2;
+  border: none;
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+  color: #000000;
+  font-style: bold;
+}
+
+.modal-description{
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  line-height: 21px;
+  font-weight: 400;
+}
+
+.error{
+  color: #FF5757;
+}
+
+.modal-people-field{
+  width: 31px;
+  background-color: #F2F2F2;
+  border: none;
+  font-size: 18px;
+  line-height: 20px;
+  font-weight: 700;
+  color: #000000;
+  font-style: bold;
+}
+
+.modal-container-close {
+  display: none;
+}
+
 /*страница с гостиницами*/
 .inner-header-container{
   display: flex;
@@ -748,31 +867,232 @@ body {
   margin-bottom: 16px;
 }
 
+/* FIELD checkbox radio*/
+.control {
+  position: relative;
+  display: block;
+  padding-left: 36px;
+}
+
+.control-mark {
+  position: absolute;
+  top: 2px;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  background-color: #FFFFFF;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.control-label {
+  line-height: 23px;
+}
+
+.control:hover .control-mark {
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+.control:focus .control-mark{
+  outline: 3px solid #83B3D3;
+  background-color: #FFFFFF;
+}
+
+.control:active .control-mark {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.control:hover .control-label {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.control:focus .control-label {
+  color: #FFFFFF;
+}
+
+.control:active .control-label {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.control-input[type="checkbox"]:checked + .control-mark::before {
+  position: absolute;
+  top: 6px;
+  left: 4px;
+  width: 13px;
+  height: 10px;
+  background-image: url(../images/icons-catalog-main/icon-checkbox.svg);
+  content: "";
+}
+
+.control-input[type="radio"] + .control-mark {
+  border-radius: 50%;
+}
+
+.control-input[type="radio"]:checked + .control-mark::before {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 10px;
+  height: 10px;
+  background-color: #3F5E72;
+  border-radius: 50%;
+  content: "";
+}
+
+/* FIELD Range-слайдер*/
 
 
 .catalog-filter-price{
   margin: 0;
-  margin-bottom: 32px;
   padding: 0;
+  margin-left: 70px;
   margin-right: 70px;
-  margin-left: auto;
-  border: none;
   display: flex;
   flex-direction: column;
-
+  border: none;
 }
 
-.catalog-filter-all-scale{
+.range-wrapper-inputs {
   display: flex;
-
 }
 
-.catalog-filter-scale{
+.filter-label-price-min {
+  margin-right: 2px;
+  position: relative;
+}
+
+.filter-label-price-min::after {
+  position: absolute;
+  font-family: inherit;
+  font-weight: 400;
   font-size: 18px;
   line-height: 24px;
-  text-align: right;
+  font-style: bold;
+  top: 12px;
+  right: 20px;
+  color: #000000;
+  opacity: 0.3;
+  content: "от";
+}
+
+.filter-label-price-max {
+  position: relative;
+}
+
+.filter-label-price-max::after {
+  position: absolute;
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  font-style: bold;
+  top: 12px;
+  right: 20px;
+  color: #000000;
+  opacity: 0.3;
+  content: "до";
+}
+
+.range-input-min{
+  margin: 0;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 20px;
+  font-family: inherit;
+  font-weight: 700;
+  background-color: #F2F2F2;
+  border: none;
+  border-radius: 4px 0 0 4px;
   width: 143px;
 }
+
+.range-input-max{
+  margin: 0;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 20px;
+  font-family: inherit;
+  font-weight: 700;
+  background-color: #F2F2F2;
+  border: none;
+  border-radius: 0 4px 4px 0;
+  width: 143px;
+}
+
+.range-input-min:hover,
+.range-input-max:hover{
+  background-color: #E6E6E6;
+}
+
+.range-input-min:focus,
+.range-input-max:focus{
+  background-color: #E6E6E6;
+  outline: 3px solid #83B3D3;
+}
+
+.range-input-min:active,
+.range-input-max:active{
+  background-color: #E6E6E6;
+  outline: 2px solid #000000;
+}
+
+.range-input-min::-webkit-outer-spin-button,
+.range-input-min::-webkit-inner-spin-button,
+.range-input-max::-webkit-outer-spin-button,
+.range-input-max::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
+.range-scale {
+  position: relative;
+  height: 4px;
+  margin-top: 46px;
+  margin-bottom: 6px;
+  background-color: rgba(255, 255, 255, 0.3);
+  width: 287px;
+}
+
+.range-bar {
+  position: absolute;
+  height: 4px;
+  background-color: #FFFFFF;
+}
+
+.range-toggle {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background: #ffffff;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+}
+
+.range-toggle:hover {
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+}
+
+.range-toggle:focus {
+  outline: 3px solid #83B3D3;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+}
+
+.range-toggle:active {
+  outline: 2px solid #83B3D3;
+  box-shadow: 0 7px 15px rgba(0, 0, 0, 0.4);
+}
+
+.toggle-min {
+  top: -8px;
+}
+
+.toggle-max {
+  top: -8px;
+  right: 0;
+}
+
+/* кнопки для фильтра*/
 
 .filter-buttons{
   display: flex;
@@ -859,10 +1179,17 @@ body {
   padding: 12px 20px;
   width: 290px;
   height: 49px;
+  font: inherit;
+  font-weight: 400;
   font-size: 18px;
   line-height: 21px;
+  color: #333333;
   border: 2px solid #E5E5E5;
   border-radius: 4px;
+  background-image: url(../images/icons-catalog-main/icon-select-arrow.svg);
+  background-repeat: no-repeat;
+  background-position: right 20px center;
+  appearance: none;
 }
 
 .select-control:hover{
